Fixed form and back button overlap

--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ body{
 	top: 0;
 	left: 0;
 	width: 3em;
+	z-index: 998;
 }
 
 /* ------------------ HOMEPAGE ------------------ */
@@ -124,6 +125,7 @@ body{
 	display: flex;
 	flex-direction: column;
 	padding: 1em;
+	z-index: 999;
 }
 
 .main_login_page > form > input{
